[package]
name = "awaitility"
description = "Awaitility for Rust"
version = "0.4.1"
authors = ["Cause Chung <cuzfrog@gmail.com>"]
homepage = "https://github.com/cuzfrog/awaitility"
repository = "https://github.com/cuzfrog/awaitility"
readme = "README.md"
license = "Apache-2.0"
keywords = ["awaitility", "async", "test"]
categories = ["development-tools::testing"]
edition = "2018"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
